deploy/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: couk-service
spec:
  selector:
    app: couk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: couk-deployment
  labels:
    app: couk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couk
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: couk
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
        - name: nginx-mount
          emptyDir: {}
      containers:
      - name: couk
        image: <IMAGE>
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
          - name: nginx-mount
            mountPath: /nginx
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /data/. /var/www/html/ && chown -R www-data:www-data /var/www/html && cp -r /data/docker/nginx/. /nginx"]
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
          - name: nginx-mount
            mountPath: /etc/nginx/conf.d
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-couk
  annotations:
    cert-manager.io/issuer: couk-issuer-production
spec:

  tls:
  - hosts:
    - davidpeach.co.uk
    secretName: couk-tls

  ingressClassName: nginx

  rules:
    - host: davidpeach.co.uk
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: couk-service
              port:
                number: 80
